# 3ds-gpu-tests

./: .gitignore  README.md
dph-tests/: README.md
dph-tests/source/: main.c  vshader.pica
dphi-tests/: Makefile  README.md
dphi-tests/source/: main.c  vshader.pica
ex2-tests/: README.md
ex2-tests/source/: main.c  vshader.pica
fp-tests/: CMakeLists.txt  Makefile  README.md
fp-tests/source/: main.cpp  vshader.pica
lg2-tests/: README.md
lg2-tests/source/: main.c  vshader.pica
mova-tests/: Makefile  README.md
mova-tests/source/: main.c  vshader.pica
rcp-tests/: CMakeLists.txt
rcp-tests/source/: main.c  vshader.pica
rsq-tests/: Makefile
rsq-tests/source/: main.c  test.h  vshader.pica
sge-tests/: README.md
sge-tests/source/: main.c  vshader.pica
sgei-tests/: README.md
sgei-tests/source/: main.c  vshader.pica
slt-tests/: README.md
slt-tests/source/: main.c  vshader.pica
slti-tests/: README.md  slt-tests.3dsx  slt-tests.elf  slt-tests.smdh
slti-tests/source/: main.c  vshader.pica
